# leafeon

./: Cargo.toml  README.md  rust-toolchain.toml
benches/: network-bench.rs
charts/chunk_0/weights/: weights_0.html  weights_1.html  weights_2.html  weights_3.html
leafeon-core/: Cargo.toml
leafeon-core/src/: lib.rs  network.rs  parser.rs
leafeon-gpu/: Cargo.toml
leafeon-gpu/src/: executor.rs  gpu.rs  lib.rs  main.rs  matrix-mul.rs  shader.wgsl  test.wgsl
leafeon-gpu/src/ops/: mod.rs  mul.rs  mult.wgsl  outer-dot.rs  outer-product.wgsl
leafeon-server/: Cargo.toml
leafeon-server/src/: error.rs  main.rs
leafeon-shaders/: Cargo.toml  build.rs
leafeon-shaders/leafeon-mmul/: Cargo.toml
leafeon-shaders/leafeon-mmul/src/: lib.rs
leafeon-types/: Cargo.toml
leafeon-types/.cargo/: config.toml
leafeon-types/benches/: ops.rs
leafeon-types/src/: benchmarks.rs  dataset.rs  lib.rs  prelude.rs
leafeon-types/src/array/: base-ops.rs  gpu-ops.rs  mod.rs
leafeon-ui/: bun.lockb  package.json
leafeon-ui/src/: App.tsx  index.css  main.tsx
leafeon-ui/src/components/: chart.tsx
src/: data.rs  lib.rs  main.rs  model.rs  parser.rs
src/model/: image-logger.rs  mod.rs  network.rs
train-data/: data  weights.txt
