[package]
name = "digit-recognition-rs"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "network-bench"
harness = false

[dependencies]
anyhow = "1.0.93"
bincode = "1.3.3"
bon = "3.0.1"
derive_more = { version = "1.0.0", features = [
	"add",
	"add_assign",
	"as_ref",
	"index",
	"index_mut",
	"mul",
	"mul_assign",
] }
indicatif = "0.17.9"
nalgebra = { version = "0.33.2", features = ["rand"] }
ndarray = { version = "0.16.1", features = [
	"matrixmultiply-threading",
	"serde",
	"blas",
] }
blas-src = { version = "0.10", default-features = false, features = [
	"accelerate",
] }
#openblas-src = { version = "0.10", features = ["cblas", "system"] }
nom = "*"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-indicatif = "0.3.6"
inquire = "0.7.5"
clap = { version = "4.5.21", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"
