[package]
name = "leafeon"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["leafeon-types", "leafeon-core", "leafeon-gpu", "leafeon-server"]

[[bench]]
name = "network-bench"
harness = false

[dependencies]
leafeon-types = { workspace = true }
leafeon-core = { workspace = true }
leafeon-gpu = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
inquire = "0.7.5"
clap = { version = "4.5.21", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
tracing-indicatif = { workspace = true }
indicatif = { workspace = true }
ndarray = { workspace = true }
bon = { workspace = true }
nom = { workspace = true }
rand = { workspace = true }

[workspace.dependencies]
base64 = "0.22.1"
leafeon-types = { path = "./leafeon-types" }
leafeon-core = { path = "./leafeon-core" }
leafeon-gpu = { path = "./leafeon-gpu" }
anyhow = "1.0.93"
bincode = "1.3.3"
bon = "3.0.1"
derive_more = { version = "1.0.0", features = [
	"add",
	"add_assign",
	"as_ref",
	"index",
	"index_mut",
	"mul",
	"mul_assign",
] }
indicatif = "0.17.9"
nalgebra = { version = "0.33.2", features = ["rand"] }
ndarray = { version = "0.16.1", features = [
	"matrixmultiply-threading",
	"serde",
	"blas",
] }
blas-src = { version = "0.10", default-features = false, features = [
	"accelerate",
] }
#openblas-src = { version = "0.10", features = ["cblas", "system"] }
nom = "*"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-indicatif = "0.3.6"
charming = "0.4.0"
pretty_assertions = "1.4.1"

[dev-dependencies]
criterion = "0.5.1"
