[package]
name = "leafeon-core"
version = "0.1.0"
edition = "2021"

[dependencies]
leafeon-types = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
bincode = "1.3.3"
bon = { workspace = true }
indicatif = { workspace = true }
ndarray = { workspace = true }
#openblas-src = { version = "0.10", features = ["cblas", "system"] }
nom = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
tracing = { workspace = true }
tracing-indicatif = { workspace = true }
#inquire = "0.7.5"
#clap = { version = "4.5.21", features = ["derive"] }
#strum = { version = "0.26.3", features = ["derive"] }
pretty_assertions = { workspace = true }

[target.aarch64-apple-darwin.dependencies]
blas-src = { version = "0.10", default-features = false, features = [
	"accelerate",
] }

[target.x86_64-pc-windows-msvc.dependencies]
blas-src = { version = "0.10", default-features = false, features = [
	"openblas",
] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
