[package]
name = "leafeon-gpu"
version = "0.1.0"
edition = "2021"


[dependencies]
cfg-if = "1"
wgpu = { version = "23.0.0", features = ["spirv"] }
leafeon-shaders = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ndarray = { workspace = true }
tracing-log = "0.2.0"
smol = "2.0.2"
bon = { workspace = true }
bytemuck = { version = "1.20.0", features = ["derive"] }
pretty_assertions = { workspace = true }
serde = { workspace = true }
rstest = "0.23.0"
serde_json = "1.0.133"


[target.aarch64-apple-darwin.dependencies]
blas-src = { version = "0.10", default-features = false, features = [
	"accelerate",
] }

[target.'cfg(target_os = "windows")'.dependencies]
blas-src = { version = "0.10", default-features = false, features = [
	"openblas",
] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[dev-dependencies]
rand = { workspace = true }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
