[package]
name = "leafeon-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
leafeon-core = { workspace = true }
leafeon-types = { workspace = true }
tokio = { version = "*", features = ["full"] }
serde = { workspace = true }
base64 = { workspace = true }
image = "0.25.5"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
