[package]
name = "leafeon-types"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "ops"
harness = false

[dependencies]
leafeon-gpu = { workspace = true }
anyhow = "1.0.93"
bincode = "1.3.3"
bon = "3.0.1"
derive_more = { version = "1.0.0", features = [
	"add",
	"add_assign",
	"as_ref",
	"index",
	"index_mut",
	"mul",
	"mul_assign",
] }
indicatif = "0.17.9"
ndarray = { workspace = true }
#openblas-src = { version = "0.10", features = ["cblas", "system"] }
nom = "*"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-indicatif = "0.3.6"
inquire = "0.7.5"
clap = { version = "4.5.21", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
pretty_assertions = "1.4.1"
rstest = "0.23.0"
wgpu = "23.0.0"
bytemuck = "1.20.0"

[dev-dependencies]
criterion = "0.5.1"
tracing-subscriber = { workspace = true }

[target.aarch64-apple-darwin.dependencies]
blas-src = { version = "0.10", default-features = false, features = [
	"accelerate",
] }

[target.x86_64-pc-windows-msvc.dependencies]
blas-src = { version = "0.10", default-features = false, features = [
	"openblas",
] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[target.x86_64-pc-windows-gnu.dependencies]
blas-src = { version = "0.10", default-features = false, features = [
	"openblas",
] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
