[package]
name = "leafeon-types"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "ndarray/serde"]

[dependencies]
leafeon-gpu = { workspace = true }
anyhow = { workspace = true }
bon = { workspace = true }
derive_more = { workspace = true, features = [
	"add",
	"add_assign",
	"as_ref",
	"index",
	"index_mut",
	"mul",
	"mul_assign",
] }
serde = { workspace = true, optional = true, features = ["derive", "rc"] }
ndarray = { workspace = true }
#openblas-src = { version = "0.10", features = ["cblas", "system"] }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
wgpu = "23.0.0"
bytemuck = "1.20.0"

[dev-dependencies]
criterion = "0.5.1"
tracing-subscriber = { workspace = true }

[target.aarch64-apple-darwin.dependencies]
blas-src = { version = "0.10", default-features = false, features = [
	"accelerate",
] }

[target.x86_64-pc-windows-msvc.dependencies]
blas-src = { version = "0.10", default-features = false, features = [
	"openblas",
] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[target.x86_64-pc-windows-gnu.dependencies]
blas-src = { version = "0.10", default-features = false, features = [
	"openblas",
] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
